# McGill-AeroHacks

./: LICENSE  README.md  flake.nix
.githooks/: pre-commit
drone-hover/: .gitignore  DroneRC.py  README.md  main.py  pyproject.toml
rtm/: .gitignore  Guidelines.md  README.md  analyze_score.py  pyproject.toml  view_playback.py
rtm/aerohacks/core/: models.py
rtm/aerohacks/policy/: base.py
rtm/my_algorithm/: policy.py
rtm/scenarios/hidden/: crash.json  drone_avoidance.json  low_battery.json  pathfinding.json  smart_pathing.json
rtm/scenarios/public/: crash.json  drone_avoidance.json  low_battery.json  pathfinding.json  smart_pathing.json
