[project]
name = "drone-hover"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy>=2.4.2", "opencv-python>=4.13.0.92", "pandas>=3.0.0"]

[dependency-groups]
dev = ["ruff>=0.15.0"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# E402: Module level import not at top of file (Often needed in notebooks)
ignore = ["E402"]
