[project]
name = "rtm"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "matplotlib>=3.7.0",
    "contextily>=1.3.0",
    "pyqt6>=6.10.2; sys_platform == 'win32' or sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'x86_64')",
    "pyqt6==6.7.0; sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[dependency-groups]
dev = ["ruff>=0.15.0"]

[tool.uv]
environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# E402: Module level import not at top of file (Often needed in notebooks)
ignore = ["E402"]
